Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -439,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'liz@ka-plan.com'"
+       "'Liz Kaplan'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,8 +456,7 @@
    "source": [
     "name = 'Liz Kaplan'\n",
     "email = 'liz@ka-plan.com'\n",
-    "name\n",
-    "email"
+    "name"
    ]
   },
   {
